--- a/drone.html
+++ b/drone.html
@@ -17,6 +17,10 @@
     socket.emit('direction_change', dirobj);
   }
 
+  socket.on('frame', (data) => {
+    alert("data");
+  });
+
   document.onkeydown = function (e) {
     if (e.keyCode == 87) {
       if (!w_press) {
