--- a/drone.html
+++ b/drone.html
@@ -30,6 +30,7 @@
 
 
   document.onkeydown = function (e) {
+    console.log(e);
     if (e.keyCode == 87) {
       if (!w_press) {
         w_press = true;
