--- a/drone.html
+++ b/drone.html
@@ -1,5 +1,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
+  console.log("hi");
   var socket = io();
 
   var w_press = false; //87
