--- a/cctv.html
+++ b/cctv.html
@@ -4,7 +4,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
-      io.on('image', (data) => {
+      socket.on('image', (data) => {
         console.log("image");
       });
     </script>
