--- a/cctv.html
+++ b/cctv.html
@@ -4,8 +4,10 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
-      socket.on('image', (data) => {
+      socket.on('image', (image) => {
         console.log("image");
+        const imageElm = document.getElementById('img');
+        image.src = 'data:image/jpeg;base46,' + image;
       });
     </script>
     <meta charset="utf-8">
