--- a/client/drone.html
+++ b/client/drone.html
@@ -1,46 +1,43 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  console.log("hi");
-  var socket = io();
+  const socket = io();
 
-  var w_press = false; //87
-  var s_press = false; //83
-  var a_press = false; //65
-  var d_press = false; //68
+  let w_press = false; //87
+  let s_press = false; //83
+  let a_press = false; //65
+  let d_press = false; //68
 
   function changed() {
-    var dirobj = {
-      "w":w_press,
-      "s":s_press,
-      "a":a_press,
-      "d":d_press
-    }
-    //console.log(dirobj);
-    socket.emit('direction_change', dirobj);
+    socket.emit('direction_change', {
+        "w":w_press,
+        "s":s_press,
+        "a":a_press,
+        "d":d_press
+    });
   }
 
 
   document.onkeydown = function (e) {
     //console.log(e);
-    if (e.keyCode == 87) {
+    if (e.keyCode === 87) {
       if (!w_press) {
         w_press = true;
         changed();
       }
     }
-    if (e.keyCode == 83) {
+    if (e.keyCode === 83) {
       if (!s_press) {
         s_press = true;
         changed();
       }
     }
-    if (e.keyCode == 65) {
+    if (e.keyCode === 65) {
       if (!a_press) {
         a_press = true;
         changed();
       }
     }
-    if (e.keyCode == 68) {
+    if (e.keyCode === 68) {
       if (!d_press) {
         d_press = true;
         changed();
@@ -49,25 +46,25 @@
   };
 
   document.onkeyup = function (e) {
-    if (e.keyCode == 87) {
+    if (e.keyCode === 87) {
       if (w_press) {
         w_press = false;
         changed();
       }
     }
-    if (e.keyCode == 83) {
+    if (e.keyCode === 83) {
       if (s_press) {
         s_press = false;
         changed();
       }
     }
-    if (e.keyCode == 65) {
+    if (e.keyCode === 65) {
       if (a_press) {
         a_press = false;
         changed();
       }
     }
-    if (e.keyCode == 68) {
+    if (e.keyCode === 68) {
       if (d_press) {
         d_press = false;
         changed();
