add missing library

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>r6d</title>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
         socket.on('image', (image) => {
